# wiseio

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
core/: CMakeLists.txt
core/include/: core.h
core/src/: CMakeLists.txt  close.c  file_utils.c  open_file.c  read.c  utils.c  write.c
lib/: CMakeLists.txt
lib/include/wise-io/: buffer.hpp  byte-reader.hpp  concepts.hpp  schemas.hpp  stream.hpp  utils.hpp
lib/include/wise-io/byte/: bytefile.hpp  chunks.hpp  storage.hpp  views.hpp
lib/include/wise-io/byte/detail/: bytefile.tpp
lib/include/wise-io/detail/: int-vector_conv.tpp
lib/src/: CMakeLists.txt
lib/src/buffer/: CMakeLists.txt  buffer.cpp
lib/src/buffer/bytes_buffer/: CMakeLists.txt  buffer.cpp
lib/src/buffer/string_buffer/: CMakeLists.txt  buffer.cpp  read_from_buffer.cpp  utils.cpp
lib/src/byte-reader/: CMakeLists.txt  byte_file.cpp  file_engine.cpp  file_namer.cpp  storage.cpp
lib/src/byte-reader/chunks/: CMakeLists.txt  byte.cpp  make.cpp  num.cpp  validate.cpp
lib/src/byte-reader/file/: CMakeLists.txt  byte_file.cpp  engine.cpp
lib/src/byte-reader/views/: CMakeLists.txt  num.cpp
lib/src/io_controller/: CMakeLists.txt  stream.cpp
lib/src/io_controller/private/: open_file.cpp  read.cpp  write.cpp
lib/src/io_controller/read/: CMakeLists.txt  cread.cpp  custom_read.cpp  read.cpp  read_all.cpp
lib/src/io_controller/sys_raw/: CMakeLists.txt  read.cpp  write.cpp
lib/src/io_controller/utils/: CMakeLists.txt  stat.cpp
lib/src/io_controller/write/: awrite.cpp  custom_write.cpp  cwrite.cpp
perf/: CMakeLists.txt  bench_read.cpp  bench_stream.cpp
tests/: CMakeLists.txt
tests/cases/: test_bytefile.cpp  test_bytes_buffer.cpp  test_chunks.cpp  test_integration.cpp  test_num_view.cpp  test_storage.cpp  test_stream_basic.cpp  test_stream_read.cpp  test_stream_write.cpp  test_string_buffer.cpp  test_wrapper_pattern.cpp
